After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724046 - local-art: Use libmediaart instead of custom code
local-art: Use libmediaart instead of custom code
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
git master
Other Mac OS
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-10 16:09 UTC by Bastien Nocera
Modified: 2014-02-19 23:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
local-metadata: Use libmediaart (8.51 KB, patch)
2014-02-19 15:06 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-02-10 16:09:11 UTC
Should clean up the plugin pretty well.
Comment 1 Bastien Nocera 2014-02-19 15:06:27 UTC
Created attachment 269693 [details] [review]
local-metadata: Use libmediaart

Instead of our copy/paste code.
Comment 2 Juan A. Suarez Romero 2014-02-19 23:31:25 UTC
Attachment 269693 [details] pushed as eb546cb - local-metadata: Use libmediaart