local-metadata: Use libmediaart

Instead of our copy/paste code.

https://bugzilla.gnome.org/show_bug.cgi?id=724046